改为智能指针实现
参考Ptr.h.
Ptr=std::shared_ptr
New=std::make_shared
Dynamic_cast =std::dynamic_pointer_cast

--- a/mathS/mathS.vcxproj
+++ b/mathS/mathS.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="include\NFunction.h" />
     <ClInclude Include="include\NMathObject.h" />
     <ClInclude Include="include\MathParser.h" />
+    <ClInclude Include="include\Ptr.h" />
     <ClInclude Include="include\string-switch.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
