--- a/mathS/mathS.vcxproj
+++ b/mathS/mathS.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="include\Rule.cpp" />
     <ClCompile Include="src\ExtendedCMath.cpp" />
     <ClCompile Include="src\LBAssembler.cpp" />
     <ClCompile Include="src\lexer.cpp" />
@@ -165,12 +166,14 @@
     <ClInclude Include="include\ExtendedCMath.h" />
     <ClInclude Include="include\LBAssembler.h" />
     <ClInclude Include="include\lexer.h" />
+    <ClInclude Include="include\MathFunction.h" />
     <ClInclude Include="include\MathObject.h" />
     <ClInclude Include="include\NFunction.h" />
     <ClInclude Include="include\NFunctionalOperator.h" />
     <ClInclude Include="include\NMathObject.h" />
     <ClInclude Include="include\MathParser.h" />
     <ClInclude Include="include\Ptr.h" />
+    <ClInclude Include="include\Rule.h" />
     <ClInclude Include="include\string-switch.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
