Rule的Residual语法再修改，增强匹配能力；增加Compute模块
在Item和Polynomial中，使用最后一项的左右下划线来匹配所有残余项。

--- a/mathS/mathS.vcxproj
+++ b/mathS/mathS.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Compute.cpp" />
     <ClCompile Include="src\ExtendedCMath.cpp" />
     <ClCompile Include="src\LBAssembler.cpp" />
     <ClCompile Include="src\lexer.cpp" />
@@ -163,6 +164,7 @@
     <ClCompile Include="src\Rule.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Compute.h" />
     <ClInclude Include="include\ExtendedCMath.h" />
     <ClInclude Include="include\LBAssembler.h" />
     <ClInclude Include="include\lexer.h" />
