--- a/mathS/mathS.vcxproj.filters
+++ b/mathS/mathS.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="src\Compute.cpp">
       <Filter>源文件\Symbolic</Filter>
     </ClCompile>
+    <ClCompile Include="src\RuleLib.cpp">
+      <Filter>源文件\Symbolic</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\ExtendedCMath.h">
@@ -105,6 +108,9 @@
       <Filter>头文件\Symbolic</Filter>
     </ClInclude>
     <ClInclude Include="include\Compute.h">
+      <Filter>头文件\Symbolic</Filter>
+    </ClInclude>
+    <ClInclude Include="include\RuleLib.h">
       <Filter>头文件\Symbolic</Filter>
     </ClInclude>
   </ItemGroup>
