添加了求积功能

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,18 @@ AUX_SOURCE_DIRECTORY(mathS/src DIR_SRCS)
 
 add_executable(mathS mathS/include/LBAssembler.h mathS/include/MathObject.h mathS/include/MathParser.h
         mathS/include/NMathObject.h
+        mathS/include/Rule.h
+        mathS/include/RuleLib.h
+        mathS/include/NFunction.h
+        mathS/include/NFunctionalOperator.h
+        mathS/include/ExtendedCMath.h
+        mathS/include/Compute.h
         mathS/src/LBAssembler.cpp mathS/src/MathObject.cpp mathS/src/MathParser.cpp
         mathS/src/NMathObject.cpp
+        mathS/src/NFunction.cpp
+        mathS/src/ExtendedCMath.cpp
+        mathS/src/Rule.cpp
+        mathS/src/RuleLib.cpp
+        mathS/src/Compute.cpp
+        mathS/src/NFunctionalOperator.cpp
         mathS/src/main.cpp mathS/src/lexer.cpp mathS/include/lexer.h)
