--- a/mathS/mathS.vcxproj
+++ b/mathS/mathS.vcxproj
@@ -151,7 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Compute.cpp" />
+    <ClCompile Include="src\Evaluate.cpp" />
     <ClCompile Include="src\ExtendedCMath.cpp" />
     <ClCompile Include="src\LBAssembler.cpp" />
     <ClCompile Include="src\lexer.cpp" />
@@ -165,7 +165,8 @@
     <ClCompile Include="src\RuleLib.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\Compute.h" />
+    <ClInclude Include="include\ConstantEvaluate.h" />
+    <ClInclude Include="include\Evaluate.h" />
     <ClInclude Include="include\ExtendedCMath.h" />
     <ClInclude Include="include\LBAssembler.h" />
     <ClInclude Include="include\lexer.h" />
